# MI3310-KTLT

./: CMakeLists.txt  FileOperation.cpp  FormProgram.txt  Invoice.cpp  Invoice.h  InvoiceManager.cpp  OrderItem.cpp  OrderItem.h  Product.cpp  Product.h  ProductManager.cpp  README.MD  README.md  SalesManager.cpp  SalesManager.h  StatisticManager.cpp  main.cpp  menu.cpp  menu.h
data/: invoices.txt  invoices_log.txt  orders.txt  products.txt  products1.txt
log/: log_2025-06-07.txt  log_2025-06-08.txt
src/log/: Logger.cpp  Logger.h
src/models/Invoice/: Invoice.cpp  Invoice.h
src/models/OrderItem/: OrderItem.cpp  OrderItem.h
src/models/Product/: Product.cpp  Product.h
src/persistence/: DataManager.cpp  DataManager.h
src/services/: SalesService.cpp  SalesService.h  SalesService_Invoice.cpp  SalesService_Product.cpp  SalesService_Statistics.cpp
src/ui/Console/: ConsoleUI.cpp  ConsoleUI.h
src/ui/Menu/: Menu.cpp  Menu.h
